# computer-vision-cw

./: .gitignore  dataset_collection.py  main.py  pyproject.toml
baseline_cnn/: baseline_cnn.ipynb
comparison/: model_comparison.ipynb
finetuned_cnn/: finetuned_resnet18.ipynb
improved_cnn/: improved_cnn.ipynb  preprocess_dataset.ipynb
