[project]
name = "coursework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "beautifulsoup4>=4.14.3",
    "icrawler>=0.6.10",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "streamlit>=1.57.0",
    "streamlit-webrtc>=0.69.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
